@@ -14,4 +14,26 @@
   conjars: http://conjars.org/repo
   Pentaho: http://repo.pentaho.org/artifactory/repo
 
-#### 
+#### sbtconfig.txt
+\# Set the java args to high
+
+-Xmx1024M
+
+-XX:MaxPermSize=512m
+
+-XX:ReservedCodeCacheSize=256m
+
+
+
+\# Set the extra SBT options
+
+-Dsbt.log.format=true
+
+\# self configuration:  ## ========================== ##
+-Dsbt.repository.config=E:/envs/sbt-1.2.7/sbt/conf/repo.properties
+-Dsbt.override.build.repos=true
+\#-Dhttp.proxyHost=localhost
+\#-Dhttp.proxyPort=8080
+\#-Dsbt.gigahorse=false
+\#-Dsbt.repository.secure=false
+\## ========================== ##
